--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "rust-analyzer.linkedProjects": [
         "./spin_core/meta_contracts/evm/Cargo.toml",
+        "./spin_core/meta_contracts/root/Cargo.toml",
         "./spin_core/Cargo.toml",
         "./spin_sdk/Cargo.toml",
-        "./example_contracts/Cargo.toml"
+        "./example_contracts/Cargo.toml",
+        "./example_contracts/demo_ccc/Cargo.toml",
+        "./example_contracts/counter/Cargo.toml",
+        "./example_contracts/fibonacci/Cargo.toml"
     ]
 }
