--- a/spin_core/meta_contracts/root/Cargo.toml
+++ b/spin_core/meta_contracts/root/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "token_contract"
+name = "root_metacontract"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 risc0-zkvm = { version = "0.16.1", default-features = false, features = [ "std" ] }
-spin_sdk = { path = "../../spin_sdk/sdk" }
-spin_sdk_macros = { path = "../../spin_sdk/macros" }
+spin_sdk = { path = "../../../spin_sdk/sdk" }
+spin_sdk_macros = { path = "../../../spin_sdk/macros" }
 borsh = { git = "ssh://github.com/near/borsh-rs", branch = "master", features = ["derive"] }
+primitive-types = "0.12.1"
+bincode = "1.3.3"
