--- a/spin_core/runtime/Cargo.toml
+++ b/spin_core/runtime/Cargo.toml
@@ -23,6 +23,7 @@ tracing = "0.1.36"
 eth-primitive-types = { package = "primitive-types", version = "0.12.1" }
 hex = "0.4.3"
 sled = "0.34.7"
+serde_json = "1.0.105"
 
 # Always optimize; building and running the guest takes much longer without optimization.
 [profile.dev]
